# arma-attendance-server-extension

./: .gitignore  README.md  meta.cpp  mod.cpp
.github/workflows/: ci.yml  staging-poke.yml  workshop-server-extension-upload.yml
.hemtt/: project.toml
addons/main/: $PBOPREFIX$  XEH_PREP.hpp  XEH_preInit.sqf  config.cpp  script_component.hpp  script_macros.hpp  stringtable.xml
addons/main/functions/: fnc_activePlayerUnits.sqf  fnc_autoDelayedStart.sqf  fnc_autoInit.sqf  fnc_autoMissionEndFallback.sqf  fnc_autoTriggerWatcher.sqf  fnc_buildAttendanceRecords.sqf  fnc_buildMissionPayload.sqf  fnc_buildOperationFinishPayload.sqf  fnc_buildOperationSource.sqf  fnc_buildOperationStartPayload.sqf  fnc_buildPlayerSnapshot.sqf  fnc_buildPlayersSnapshot.sqf  fnc_callExtension.sqf  fnc_deleteModuleLogic.sqf  fnc_encodeJson.sqf  fnc_extractJsonStringField.sqf  fnc_findMissionTriggerByName.sqf  fnc_incrementPresenceStat.sqf  fnc_isHeadlessClient.sqf  fnc_log.sqf  fnc_markPlayerAbsent.sqf  fnc_markPlayerPresentFromUnit.sqf  fnc_missionEndOutcome.sqf  (+23 more)
docs/: CI_RELEASE_PACKAGING.md  LOCAL_DEVELOPMENT.md  OPERATION_AUTOMATION.md  PRESENCE_LEDGER.md  WEB_API_CONTRACT_CURRENT.md  WORKSHOP_SERVER_EXTENSION.md
extension/: CMakeLists.txt  CMakePresets.json  vcpkg.json
extension/include/arma_attendance/: commands.hpp  config.hpp  http_client.hpp  json.hpp
extension/src/: commands.cpp  config.cpp  extension_exports.cpp  http_client.cpp
extension/tests/: mock_api_server.py  presence_ledger_cases.py  run_contract_smoke.py  smoke_main.cpp  validate_attendance_records.py  validate_payloads.py  validate_scoreboard_deltas.py  validate_sqf_modules.py
extension/tests/fixtures/: finish-operation-scoreboard-stats.example.json  finish-operation-with-attendance-records.example.json  finish-operation.web-frontend.example.json  operation_finish_minimal.json  operation_finish_with_stats.json  operation_start_minimal.json  presence-ledger-cases.json  scoreboard-delta-cases.json  start-operation.web-frontend.example.json
servermod/: README-server-install.md  README-server-install.txt  README-workshop-server-extension.md  arma_attendance.example.toml  meta.cpp  mod.cpp  tcwa3_stats_tracker.example.toml
servermod/.hemtt/: project.toml
tools/: assemble-package.sh  assemble_release.sh  assemble_workshop_server_extension.sh  audit_workshop_package.py  check_automation_static.py  local-contract-smoke.sh  test_workshop_package_audit.py  verify-windows-dll-static.ps1
(+2 files in other folders)
